--- a/css/home.css
+++ b/css/home.css
@@ -3,42 +3,126 @@
   src: url("../fonts/Josefin_Sans/JosefinSans-VariableFont_wght.ttf");
 }
 
-#profile-picture {
-  float: left;
-  object-fit: contain;
+/*=============================================
+=            Base Styles            =
+=============================================*/
+
+/* The basic styles for the site */
+
+/*=====  End of Base Styles  ======*/
+
+/* Set a black background */
+
+body {
+  background-color: black;
+}
+
+/* The root font style */
+
+.font-base {
+  font-family: "Josefin Sans";
+  font-style: normal;
+  font-weight: 300;
+  color: white;
+}
+
+#container-title-background {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+/* Setup the background image for the site. */
+
+#image-title-background {
+  position: relative;
+  width: 100%;
+  object-fit: cover;
+  clip-path: inset(0 0 20% 0);
+  opacity: 0.7;
+}
+
+/**
+ *
+ * Setup the page container.
+ * Make it absolute to appear above the background image.
+ * Make it take up the full width available on screen.
+ *
+ */
+
+#container-page {
+  position: relative;
   width: 100%;
 }
 
-#container-page {
-  width: 100%;
-}
+/*=============================================
+=            Title Bar Styles            =
+=============================================*/
+
+/* The styles for items in the title bar */
+
+/*=====  End of Title Bar Styles  ======*/
+
+/**
+*
+* Setup the title bar as a flex container.
+*
+* Because this is a child of an absolute container,
+* we need to set it's left and right values to occupy
+* the available space.
+* 
+* We'll also need to set a margin so it doesn't sit
+* on the edge of viewport.
+*
+*/
 
 #flex-container-menu {
   display: flex;
   flex-direction: row;
-  position: absolute;
   right: 0;
   left: 0;
-  justify-content: stretch;
-  margin: 30px;
+  margin: 4vmax;
 }
 
-#flex-item-container-welcome {
+/* Set the title area to flex so it pushes the navbar right. */
+
+#flex-item-container-title {
   flex-grow: 1;
 }
 
-#text-navbar {
-  margin: 5px;
-  font-family: "Josefin Sans";
-  font-size: 26px;
-  font-weight: bold;
-  color: white;
-  text-decoration: none;
+#text-title {
+  font-size: 2.5rem;
 }
 
-#welcome {
-  font-family: "Josefin Sans";
-  font-weight: bold;
-  font-style: normal;
+.text-navbar {
+  margin: 0.8vmax;
+  font-size: 1.5rem;
+  font-weight: 100;
   color: white;
+}
+
+#text-hello-message {
+  font-size: 3.5rem;
+}
+
+#text-about-me {
+  font-size: 2rem;
+  margin: 0;
+  padding-left: 0.2vmax;
+}
+
+#container-welcome {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: left;
+  padding-left: 7vmax;
+  padding-top: 6.6vmax;
+  padding-bottom: 6.6vmax;
+  width: 30%;
+}
+
+#container-content {
 }
