--- a/css/home.css
+++ b/css/home.css
@@ -17,6 +17,12 @@ body {
   background-color: white;
 }
 
+/* Since we use a black background, set default image text to white */
+
+img {
+  color: white;
+}
+
 /* The root font style */
 
 .font-base {
@@ -78,22 +84,34 @@ body {
 *
 */
 
-#flex-container-menu {
+#container-navbar {
   display: flex;
   flex-direction: row;
+  align-items: center;
   right: 0;
   left: 0;
   margin: 4vmax;
+  margin-top: 3vmax;
 }
 
 /* Set the title area to flex so it pushes the navbar right. */
 
-#flex-item-container-title {
+#container-title {
   flex-grow: 1;
 }
 
 #text-title {
   font-size: 2.5rem;
+}
+
+.list-navbar {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.item-navbar {
+  display: inline;
 }
 
 .text-navbar {
@@ -107,8 +125,8 @@ body {
   font-size: 3.5rem;
 }
 
-#text-about-me {
-  font-size: 2rem;
+.text-about-me {
+  font-size: 1.5rem;
   margin: 0;
   padding-top: 2.5vmax;
   padding-left: 0.2vmax;
@@ -143,13 +161,47 @@ body {
   align-items: center;
   background-color: white;
   margin-top: 22vmax;
+  padding-bottom: 4vmax;
   width: 100%;
   height: 100%;
 }
 
-#text-what-im-doing {
-  font-size: 2rem;
-  font-weight: 320;
+#text-what-im-doing-title {
+  font-size: 3rem;
+  font-weight: 340;
   color: black;
-  padding: 4vmax;
+  padding: 0;
+  padding-top: 4vmax;
+  padding-bottom: 1vmax;
+  margin: 0;
+}
+
+#container-what-im-doing-content {
+  justify-content: left;
+  width: 45%;
+}
+
+.text-what-im-doing {
+  font-size: 1.4rem;
+}
+
+.text-what-im-doing-update {
+  font-style: italic;
+  font-weight: lighter;
+  color: black;
+  margin: 0;
+  padding-top: 2vmax;
+}
+
+.text-what-im-doing-entry {
+  color: black;
+  line-height: 2;
+  padding-top: 1.6vmax;
+  margin: 0;
+}
+
+.link-content {
+  color: black;
+  text-decoration: underline;
+  text-underline-offset: 0.4vmax;
 }
